// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can choose build tools and copy provided settings: Dart linux: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-aarch64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux-aarch64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: Dart linux: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: Dart macos: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-macosx-aarch64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-macosx-aarch64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: Dart macos: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: Dart windows: download scanner 1`] = `
"$env:SONAR_SCANNER_VERSION = "6.2.0.4584"
$env:SONAR_DIRECTORY = [System.IO.Path]::Combine($(get-location).Path,".sonar")
$env:SONAR_SCANNER_HOME = "$env:SONAR_DIRECTORY/sonar-scanner-$env:SONAR_SCANNER_VERSION-windows-x64"
rm $env:SONAR_SCANNER_HOME -Force -Recurse -ErrorAction SilentlyContinue
New-Item -path $env:SONAR_SCANNER_HOME -type directory
(New-Object System.Net.WebClient).DownloadFile("https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$env:SONAR_SCANNER_VERSION-windows-x64.zip", "$env:SONAR_DIRECTORY/sonar-scanner.zip")
Add-Type -AssemblyName System.IO.Compression.FileSystem
[System.IO.Compression.ZipFile]::ExtractToDirectory("$env:SONAR_DIRECTORY/sonar-scanner.zip", "$env:SONAR_DIRECTORY")
rm ./.sonar/sonar-scanner.zip -Force -ErrorAction SilentlyContinue
$env:Path += ";$env:SONAR_SCANNER_HOME/bin"
"
`;

exports[`can choose build tools and copy provided settings: Dart windows: execute scanner 1`] = `"sonar-scanner.bat -D"sonar.projectKey=my-project" -D"sonar.sources=." -D"sonar.host.url=http://localhost:9000""`;

exports[`can choose build tools and copy provided settings: c++ (automatic) and other linux arm64: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-aarch64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux-aarch64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (automatic) and other linux arm64: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: c++ (automatic) and other linux: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-x64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux-x64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (automatic) and other linux: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: c++ (automatic) and other linux: execute scanner 2`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-aarch64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux-aarch64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (automatic) and other macos: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: c++ (automatic) and other macos: execute scanner 2`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-macosx-aarch64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-macosx-aarch64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (automatic) and other windows: execute scanner 1`] = `"sonar-scanner.bat -D"sonar.projectKey=my-project" -D"sonar.sources=." -D"sonar.host.url=http://localhost:9000""`;

exports[`can choose build tools and copy provided settings: c++ (automatic) and other windows: execute scanner 2`] = `
"$env:SONAR_SCANNER_VERSION = "6.2.0.4584"
$env:SONAR_DIRECTORY = [System.IO.Path]::Combine($(get-location).Path,".sonar")
$env:SONAR_SCANNER_HOME = "$env:SONAR_DIRECTORY/sonar-scanner-$env:SONAR_SCANNER_VERSION-windows-x64"
rm $env:SONAR_SCANNER_HOME -Force -Recurse -ErrorAction SilentlyContinue
New-Item -path $env:SONAR_SCANNER_HOME -type directory
(New-Object System.Net.WebClient).DownloadFile("https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$env:SONAR_SCANNER_VERSION-windows-x64.zip", "$env:SONAR_DIRECTORY/sonar-scanner.zip")
Add-Type -AssemblyName System.IO.Compression.FileSystem
[System.IO.Compression.ZipFile]::ExtractToDirectory("$env:SONAR_DIRECTORY/sonar-scanner.zip", "$env:SONAR_DIRECTORY")
rm ./.sonar/sonar-scanner.zip -Force -ErrorAction SilentlyContinue
$env:Path += ";$env:SONAR_SCANNER_HOME/bin"
"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) linux arm64: download build wrapper 1`] = `
"curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-aarch64.zip http://localhost:9000/static/cpp/build-wrapper-linux-aarch64.zip
unzip -o $HOME/.sonar/build-wrapper-linux-aarch64.zip -d $HOME/.sonar/
export PATH=$HOME/.sonar/build-wrapper-linux-aarch64:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) linux arm64: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-aarch64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux-aarch64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) linux arm64: execute build wrapper 1`] = `"build-wrapper-linux-aarch64 --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"`;

exports[`can choose build tools and copy provided settings: c++ (manual) linux arm64: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.cfamily.compile-commands=bw-output/compile_commands.json \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) linux: download build wrapper 1`] = `
"curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip http://localhost:9000/static/cpp/build-wrapper-linux-x86.zip
unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
export PATH=$HOME/.sonar/build-wrapper-linux-x86:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) linux: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-x64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux-x64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) linux: execute build wrapper 1`] = `"build-wrapper-linux-x86-64 --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"`;

exports[`can choose build tools and copy provided settings: c++ (manual) linux: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.cfamily.compile-commands=bw-output/compile_commands.json \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) macos: download build wrapper 1`] = `
"curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-macosx-x86.zip http://localhost:9000/static/cpp/build-wrapper-macosx-x86.zip
unzip -o $HOME/.sonar/build-wrapper-macosx-x86.zip -d $HOME/.sonar/
export PATH=$HOME/.sonar/build-wrapper-macosx-x86:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) macos: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-macosx-aarch64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-macosx-aarch64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) macos: execute build wrapper 1`] = `"build-wrapper-macosx-x86 --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"`;

exports[`can choose build tools and copy provided settings: c++ (manual) macos: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.cfamily.compile-commands=bw-output/compile_commands.json \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) windows: download build wrapper 1`] = `
"$env:SONAR_DIRECTORY = [System.IO.Path]::Combine($(get-location).Path,".sonar")
rm "$env:SONAR_DIRECTORY/build-wrapper-win-x86" -Force -Recurse -ErrorAction SilentlyContinue
New-Item -path $env:SONAR_DIRECTORY/build-wrapper-win-x86 -type directory
(New-Object System.Net.WebClient).DownloadFile("http://localhost:9000/static/cpp/build-wrapper-win-x86.zip", "$env:SONAR_DIRECTORY/build-wrapper-win-x86.zip")
Add-Type -AssemblyName System.IO.Compression.FileSystem
[System.IO.Compression.ZipFile]::ExtractToDirectory("$env:SONAR_DIRECTORY/build-wrapper-win-x86.zip", "$env:SONAR_DIRECTORY")
$env:Path += ";$env:SONAR_DIRECTORY/build-wrapper-win-x86"
"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) windows: download scanner 1`] = `
"$env:SONAR_SCANNER_VERSION = "6.2.0.4584"
$env:SONAR_DIRECTORY = [System.IO.Path]::Combine($(get-location).Path,".sonar")
$env:SONAR_SCANNER_HOME = "$env:SONAR_DIRECTORY/sonar-scanner-$env:SONAR_SCANNER_VERSION-windows-x64"
rm $env:SONAR_SCANNER_HOME -Force -Recurse -ErrorAction SilentlyContinue
New-Item -path $env:SONAR_SCANNER_HOME -type directory
(New-Object System.Net.WebClient).DownloadFile("https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$env:SONAR_SCANNER_VERSION-windows-x64.zip", "$env:SONAR_DIRECTORY/sonar-scanner.zip")
Add-Type -AssemblyName System.IO.Compression.FileSystem
[System.IO.Compression.ZipFile]::ExtractToDirectory("$env:SONAR_DIRECTORY/sonar-scanner.zip", "$env:SONAR_DIRECTORY")
rm ./.sonar/sonar-scanner.zip -Force -ErrorAction SilentlyContinue
$env:Path += ";$env:SONAR_SCANNER_HOME/bin"
"
`;

exports[`can choose build tools and copy provided settings: c++ (manual) windows: execute build wrapper 1`] = `"build-wrapper-win-x86-64.exe --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"`;

exports[`can choose build tools and copy provided settings: c++ (manual) windows: execute scanner 1`] = `"sonar-scanner.bat -D"sonar.projectKey=my-project" -D"sonar.sources=." -D"sonar.cfamily.compile-commands=bw-output/compile_commands.json" -D"sonar.host.url=http://localhost:9000""`;

exports[`can choose build tools and copy provided settings: dotnet core: execute command 1 1`] = `"dotnet sonarscanner begin /k:"my-project" /d:sonar.host.url="http://localhost:9000"  /d:sonar.token="generatedtoken2""`;

exports[`can choose build tools and copy provided settings: dotnet core: execute command 2 1`] = `"dotnet build"`;

exports[`can choose build tools and copy provided settings: dotnet core: execute command 3 1`] = `"dotnet sonarscanner end /d:sonar.token="generatedtoken2""`;

exports[`can choose build tools and copy provided settings: dotnet core: install scanner globally 1`] = `"dotnet tool install --global dotnet-sonarscanner"`;

exports[`can choose build tools and copy provided settings: dotnet framework: execute command 1 1`] = `"SonarScanner.MSBuild.exe begin /k:"my-project" /d:sonar.host.url="http://localhost:9000" /d:sonar.token="generatedtoken2""`;

exports[`can choose build tools and copy provided settings: dotnet framework: execute command 2 1`] = `"MsBuild.exe /t:Rebuild"`;

exports[`can choose build tools and copy provided settings: dotnet framework: execute command 3 1`] = `"SonarScanner.MSBuild.exe end /d:sonar.token="generatedtoken2""`;

exports[`can choose build tools and copy provided settings: gradle: execute scanner 1`] = `
"./gradlew sonar \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.projectName='MyProject' \\
  -Dsonar.host.url=http://localhost:9000 \\
  -Dsonar.token=generatedtoken2"
`;

exports[`can choose build tools and copy provided settings: gradle: sonarqube plugin 1`] = `
"plugins {
  id "org.sonarqube" version "6.0.0.5145"
}"
`;

exports[`can choose build tools and copy provided settings: maven: execute scanner 1`] = `
"mvn clean verify sonar:sonar \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.projectName='MyProject' \\
  -Dsonar.host.url=http://localhost:9000 \\
  -Dsonar.token=generatedtoken2"
`;

exports[`can choose build tools and copy provided settings: objective-c linux arm64: download build wrapper 1`] = `
"curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-aarch64.zip http://localhost:9000/static/cpp/build-wrapper-linux-aarch64.zip
unzip -o $HOME/.sonar/build-wrapper-linux-aarch64.zip -d $HOME/.sonar/
export PATH=$HOME/.sonar/build-wrapper-linux-aarch64:$PATH
"
`;

exports[`can choose build tools and copy provided settings: objective-c linux arm64: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-aarch64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux-aarch64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: objective-c linux arm64: execute build wrapper 1`] = `"build-wrapper-linux-aarch64 --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"`;

exports[`can choose build tools and copy provided settings: objective-c linux arm64: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.cfamily.compile-commands=bw-output/compile_commands.json \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: objective-c linux: download build wrapper 1`] = `
"curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-linux-x86.zip http://localhost:9000/static/cpp/build-wrapper-linux-x86.zip
unzip -o $HOME/.sonar/build-wrapper-linux-x86.zip -d $HOME/.sonar/
export PATH=$HOME/.sonar/build-wrapper-linux-x86:$PATH
"
`;

exports[`can choose build tools and copy provided settings: objective-c linux: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-x64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux-x64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: objective-c linux: execute build wrapper 1`] = `"build-wrapper-linux-x86-64 --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"`;

exports[`can choose build tools and copy provided settings: objective-c linux: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.cfamily.compile-commands=bw-output/compile_commands.json \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: objective-c macos: download build wrapper 1`] = `
"curl --create-dirs -sSLo $HOME/.sonar/build-wrapper-macosx-x86.zip http://localhost:9000/static/cpp/build-wrapper-macosx-x86.zip
unzip -o $HOME/.sonar/build-wrapper-macosx-x86.zip -d $HOME/.sonar/
export PATH=$HOME/.sonar/build-wrapper-macosx-x86:$PATH
"
`;

exports[`can choose build tools and copy provided settings: objective-c macos: download scanner 1`] = `
"export SONAR_SCANNER_VERSION=6.2.0.4584
export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-macosx-aarch64
curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-macosx-aarch64.zip
unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
export PATH=$SONAR_SCANNER_HOME/bin:$PATH
"
`;

exports[`can choose build tools and copy provided settings: objective-c macos: execute build wrapper 1`] = `"build-wrapper-macosx-x86 --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"`;

exports[`can choose build tools and copy provided settings: objective-c macos: execute scanner 1`] = `
"sonar-scanner \\
  -Dsonar.projectKey=my-project \\
  -Dsonar.sources=. \\
  -Dsonar.cfamily.compile-commands=bw-output/compile_commands.json \\
  -Dsonar.host.url=http://localhost:9000"
`;

exports[`can choose build tools and copy provided settings: objective-c windows: download build wrapper 1`] = `
"$env:SONAR_DIRECTORY = [System.IO.Path]::Combine($(get-location).Path,".sonar")
rm "$env:SONAR_DIRECTORY/build-wrapper-win-x86" -Force -Recurse -ErrorAction SilentlyContinue
New-Item -path $env:SONAR_DIRECTORY/build-wrapper-win-x86 -type directory
(New-Object System.Net.WebClient).DownloadFile("http://localhost:9000/static/cpp/build-wrapper-win-x86.zip", "$env:SONAR_DIRECTORY/build-wrapper-win-x86.zip")
Add-Type -AssemblyName System.IO.Compression.FileSystem
[System.IO.Compression.ZipFile]::ExtractToDirectory("$env:SONAR_DIRECTORY/build-wrapper-win-x86.zip", "$env:SONAR_DIRECTORY")
$env:Path += ";$env:SONAR_DIRECTORY/build-wrapper-win-x86"
"
`;

exports[`can choose build tools and copy provided settings: objective-c windows: download scanner 1`] = `
"$env:SONAR_SCANNER_VERSION = "6.2.0.4584"
$env:SONAR_DIRECTORY = [System.IO.Path]::Combine($(get-location).Path,".sonar")
$env:SONAR_SCANNER_HOME = "$env:SONAR_DIRECTORY/sonar-scanner-$env:SONAR_SCANNER_VERSION-windows-x64"
rm $env:SONAR_SCANNER_HOME -Force -Recurse -ErrorAction SilentlyContinue
New-Item -path $env:SONAR_SCANNER_HOME -type directory
(New-Object System.Net.WebClient).DownloadFile("https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$env:SONAR_SCANNER_VERSION-windows-x64.zip", "$env:SONAR_DIRECTORY/sonar-scanner.zip")
Add-Type -AssemblyName System.IO.Compression.FileSystem
[System.IO.Compression.ZipFile]::ExtractToDirectory("$env:SONAR_DIRECTORY/sonar-scanner.zip", "$env:SONAR_DIRECTORY")
rm ./.sonar/sonar-scanner.zip -Force -ErrorAction SilentlyContinue
$env:Path += ";$env:SONAR_SCANNER_HOME/bin"
"
`;

exports[`can choose build tools and copy provided settings: objective-c windows: execute build wrapper 1`] = `"build-wrapper-win-x86-64.exe --out-dir bw-output onboarding.analysis.build_wrapper.execute_build_command"`;

exports[`can choose build tools and copy provided settings: objective-c windows: execute scanner 1`] = `"sonar-scanner.bat -D"sonar.projectKey=my-project" -D"sonar.sources=." -D"sonar.cfamily.compile-commands=bw-output/compile_commands.json" -D"sonar.host.url=http://localhost:9000""`;
